<resources>
    <string name="app_name">MyCalculator</string>
    <string name="c">C</string>
    <string name="percent">%</string>
    <string name="split">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="compute">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="nil">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="number">\\d+\\.?\\d+|\\d</string>
    <string name="not_a_number">[^.\\d]</string>
    <string name="square">√</string>
    <string name="settings">settings</string>
    <string name="choice_theme">Выберите тему приложения</string>
    <string name="theme_1">Тема №1</string>
    <string name="theme_2">Тема №2</string>
    <string name="theme_3">Тема №3</string>
    <string name="apply_theme">Тема применена</string>
    <string name="back">Назад</string>
</resources>